--- a/eda.qmd
+++ b/eda.qmd
@@ -10,6 +10,8 @@ library(palmerpenguins)
 library(dplyr)
 library(ggplot2)
 library(dbplyr)
+library(knitr)
+library(rmarkdown)
 
 con <- DBI::dbConnect(
   duckdb::duckdb(), 
