--- a/model.qmd
+++ b/model.qmd
@@ -58,8 +58,8 @@ app = VetiverAPI(v, check_prototype=True)
 ```
 
 ```{python}
-from vetiver import prepare_docker
-prepare_docker(b, "penguin_model")
+# from vetiver import prepare_docker
+# prepare_docker(b, "penguin_model")
 ```
 
 ```{python}
