--- a/about.qmd
+++ b/about.qmd
@@ -4,16 +4,20 @@ title: "About"
 
 Welcome to C2C Renata Russell's Final Project Workspace! This is the beginning of a beautiful journey through the book "DevOps for Data Science" by Alex Gold. More specifically, we covered Labs 1-6, which went over:
 
--   T
+-   Installing RStudio and Python
 
--   T
+-   Creating a Quarto website project
 
--   T
+-   Initializing and maintaining a working renv environment in R and venv environment in Python to manage package versions
 
--   T
+-   Creating the penguins model to predict body mass based on bill length, species, and sex
 
--   T
+-   Creating a Shiny App than calls an API to interact with the model via https requests and port connections
 
--   Creating
+-   Implementing proper logging techniques to monitor connectivity and action completion for troubleshooting purposes
 
-So if you like data science (and penguins...)
+-   Interfacing with GitHub to store the project information in an online repository and deploy the website via GitHub actions
+
+-   Creating a docker system to manage and run multiple programs simultaneously
+
+So if you like data science (and penguins...), read on!
